--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Chat App</title>
     <link rel="icon" href="/img/favicon.png">
     <link rel="stylesheet" href="/css/styles.min.css">
+    <link rel="manifest" href="../manifest.webmanifest">
 </head>
 <body>
     <div class="centered-form">
@@ -21,5 +22,6 @@
             </form>
         </div>
     </div>
+    <script src="./js/app.js"></script>
 </body>
 </html>
