--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/img/favicon.png">
     <link rel="stylesheet" href="/css/styles.min.css">
     <link rel="manifest" href="../manifest.webmanifest">
-    <link rel="apple-touch-icon" sizes="152x152" href="./img/icons/icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/img/icons/icon-152x152.png">
 </head>
 <body>
     <div class="centered-form">
