--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Chat App</title>
     <link rel="icon" href="/img/favicon.png">
     <link rel="stylesheet" href="/css/styles.min.css">
-    <link rel="manifest" href="../manifest.webmanifest">
+    <link rel="manifest" href="./manifest.webmanifest">
     <link rel="apple-touch-icon" sizes="152x152" href="/img/icons/icon-152x152.png">
 </head>
 <body>
